$Id: ChangeLog,v 1.104 2004/11/14 18:34:25 h_oudejans Exp $

2004-12-03 Herman Oudejans <hn.oudejans@quicknet.nl>
	* fixed info2code.mk so config.h and version.ii are created with
	  wxT macro's
	* removed wxT macro where used in combination with XRCID since
	  this also includes the wxT macro.
	* added (char *) cast to all functions using wxString.c_str()
	* fixed a redefinition warning in vc++

2004-12-01 Herman Oudejans <hn.oudejans@quicknet.nl>
	* added wxT macro's for compilation with unicode

2004-11-14 Herman Oudejans <hn.oudejans@quicknet.nl>
	* catapult can be compiled in mingw without any alteration of 
	  wx-config. The result is still far bigger than using vc++, so it's 
	  not perfect yet.

2004-11-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed gcc compiler warning (signed/unsigned mismatch) in FOREACH 
	  code
	* First step for compiling using mingw:
		- Included <windows.h> where HANDLE is needed
		- Replaced FindWindow() by FindWindowByName() because mingw gets 
		  confused about the FindWindow defined in winbase.h (windows.h)
		- Replaced __WINDOWS__ by __WXMSW__ (wx-config has only -D__WXMSW__)
		- Fixed vc++ compiler error in CatapultConfigDlg.

2004-11-10 Herman Oudejans <hn.oudejans@quicknet.nl>
	* All static arrays that used to be looped through by for-loops, are
	  now looped by the new macro FOREACH

2004-11-10 Joost Yervante Damad <joost@lumatec.be>
	* debian packaging is working
	* make configurable:
		- default openmsx binary location
		- default openmsx system share dir location
		- creation of the desktop entries can be disabled

2004-11-06 Joost Yervante Damad <joost@lumatec.be>
	* make it possible to disable symlink for install
	* removed some ^M's from AUTHORS file

2004-11-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Removed all hard loopends used in combination with static arrays to
	  avoid problem with adding or removing elements in those arrays (e.g.
	  the media types).
